--- a/app/src/main/res/layout/fragment_cust_order_details.xml
+++ b/app/src/main/res/layout/fragment_cust_order_details.xml
@@ -14,9 +14,10 @@
         android:visibility="visible" />
 
     <ScrollView
-        android:id="@+id/scrollViewContent"
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         android:background="@color/white">
 
         <LinearLayout
