--- a/app/src/main/res/layout/fragment_cust_beranda.xml
+++ b/app/src/main/res/layout/fragment_cust_beranda.xml
@@ -207,6 +207,7 @@
                 android:gravity="center_vertical">
 
                 <TextView
+                    android:id="@+id/tv_rekomendasi_trip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingTop="4dp"
