--- a/app/src/main/res/layout/fragment_auth_onboarding_1.xml
+++ b/app/src/main/res/layout/fragment_auth_onboarding_1.xml
@@ -38,7 +38,7 @@
         android:layout_below="@id/illustration"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:text="@string/onboarding_1"
+        android:text="Selamat Datang di HighKing!"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="@android:color/black"/>
@@ -52,7 +52,7 @@
         android:layout_marginTop="8dp"
         android:paddingStart="32dp"
         android:paddingEnd="32dp"
-        android:text="@string/lorem_ipsum_2"
+        android:text="Temukan cara baru untuk mengelola pendakian Anda dengan mudah dan nyaman"
         android:textSize="16sp"
         android:textColor="@android:color/black"
         android:gravity="center"/>
