--- a/app/src/main/res/layout/fragment_auth_onboarding_gate.xml
+++ b/app/src/main/res/layout/fragment_auth_onboarding_gate.xml
@@ -78,7 +78,7 @@
             android:layout_marginEnd="24dp"
             android:backgroundTint="@color/green_light"
             app:iconTint="@color/green_primary"
-            android:text="Masuk"
+            android:text="Log in"
             android:textColor="@color/green_primary"/>
 
         <Button
@@ -91,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/green_primary"
-            android:text="Daftar"
+            android:text="Register"
             android:textColor="@android:color/white"/>
 
     </LinearLayout>
