--- a/app/src/main/res/layout/fragment_cust_filter.xml
+++ b/app/src/main/res/layout/fragment_cust_filter.xml
@@ -29,7 +29,7 @@
         android:drawableStart="@drawable/ic_place_outline"
         android:drawablePadding="8dp"
         android:drawableTint="@android:color/darker_gray"
-        android:hint="Location"
+        android:hint="Nama Gunung"
         android:padding="12dp"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
