feat: chat message

--- a/app/src/main/res/layout/item_chat_list.xml
+++ b/app/src/main/res/layout/item_chat_list.xml
@@ -9,7 +9,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="14dp"
+        android:paddingHorizontal="20dp"
         android:paddingVertical="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -73,6 +73,7 @@
             android:background="@drawable/custom_bg_circle_green"
             android:gravity="center"
             app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
