--- a/app/src/main/res/layout/fragment_cust_chatroom.xml
+++ b/app/src/main/res/layout/fragment_cust_chatroom.xml
@@ -7,6 +7,17 @@
     android:padding="16dp"
     tools:context=".ui.cust.chatroom.ChatRoomFragment">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="visible"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <!-- RecyclerView for chat messages -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewChatMessages"
