--- a/app/src/main/res/layout/activity_cust.xml
+++ b/app/src/main/res/layout/activity_cust.xml
@@ -13,6 +13,7 @@
         android:layout_height="55dp"
         android:background="@color/white"
         app:title="Title"
+        style="@style/testStyleToolBar"
         app:titleCentered="true"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
         app:layout_constraintTop_toTopOf="parent"
