--- a/app/src/main/res/layout/fragment_cust_chatroom.xml
+++ b/app/src/main/res/layout/fragment_cust_chatroom.xml
@@ -38,6 +38,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="4dp"
+        android:layout_marginBottom="0dp"
         android:gravity="center_vertical"
         android:background="@drawable/custom_bg_message_input"
         app:layout_constraintBottom_toBottomOf="parent"
