--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -58,6 +58,12 @@
 
     <!-- FOR TYPOGRAPHY   -->
 
+    <style name="testStyleToolBar" parent="Widget.MaterialComponents.Toolbar">
+        <item name="fontFamily">@font/poppinsmedium</item>
+        <item name="android:includeFontPadding">false</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="textStyleSemIBold_32">
         <item name="android:textColor">@color/black</item>
         <item name="fontFamily">@font/poppinssemibold</item>
